fixing background issue on mobile

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -15,7 +15,7 @@
 .home:before {
   content: "";
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background: #000;
   opacity: 0.77;
   position: absolute;
